@@ -515,11 +515,23 @@
 
 - (IBAction)executeInsert:(id)sender
 {
-  NSString      *filePath;
-  DBCVSReader   *reader;
-  NSString      *intoWhichObject;
-  DBProgress    *progress;
+  NSString       *filePath;
+  NSString       *resFilePath;
+  DBCVSReader    *reader;
+  NSString       *intoWhichObject;
+  DBProgress     *progress;
+  NSMutableArray *results;
+  NSFileManager  *fileManager;
+  NSFileHandle   *resFH;
+  NSUserDefaults *defaults;
+  DBCVSWriter    *resWriter;
   
+  defaults = [NSUserDefaults standardUserDefaults];  
+  filePath = [fieldFileUpdate stringValue];
+  resFilePath = [[filePath stringByDeletingLastPathComponent] stringByAppendingPathComponent: @"results.csv"];
+
+  NSLog(@"writing results to: %@", resFilePath);
+
   filePath = [fieldFileInsert stringValue];
   NSLog(@"%@", filePath);
   
@@ -530,10 +542,11 @@
   [progress setLogger:logger];
   [progress reset];
   
+  results = nil;
   reader = [[DBCVSReader alloc] initWithPath:filePath withLogger:logger];
-  
   NS_DURING
-    [dbCsv create:intoWhichObject fromReader:reader progressMonitor:progress];
+    results = [dbCsv create:intoWhichObject fromReader:reader progressMonitor:progress];
+    [results retain];
   NS_HANDLER
     if ([[localException name] hasPrefix:@"DB"])
       {
@@ -541,10 +554,35 @@
         [faultPanel makeKeyAndOrderFront:nil];
       }
   NS_ENDHANDLER
-  
+
+
+    fileManager = [NSFileManager defaultManager];
+  if ([fileManager createFileAtPath:resFilePath contents:nil attributes:nil] == NO)
+    {
+      NSRunAlertPanel(@"Attention", @"Could not create File.", @"Ok", nil, nil);
+    }  
+
+  resFH = [NSFileHandle fileHandleForWritingAtPath:resFilePath];
+  if (resFH == nil)
+    {
+      NSRunAlertPanel(@"Attention", @"Cannot create File.", @"Ok", nil, nil);
+    }
+  else
+    {
+      resWriter = [[DBCVSWriter alloc] initWithHandle:resFH];
+      [resWriter setLogger:logger];
+      [resWriter setStringEncoding: [[defaults valueForKey: @"StringEncoding"] intValue]];
+      
+      [resWriter setFieldNames:[results objectAtIndex: 0] andWriteIt:YES];
+      [resWriter writeDataSet: results];
+      
+      [resWriter release];
+    }
+
   [reader release];
   [intoWhichObject release];
   [progress release];
+  [results release];
 }
 
 /* UPDATE */
